# dash-connectivity-viewer

./: .bumpversion.cfg  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  MANIFEST.in  PLAN_RECIPES_AND_EXAMPLES.md  README.md  TO_CONFIG.md  pyproject.toml  requirements.in  requirements.txt  run.py  run_api.py  run_cell_type_table.py  run_connectivity_table.py  run_ct_connectivity.py  setup.py
config/datastacks/: minnie65_phase3_v1.yaml  minnie65_public.yaml
dash_connectivity_viewer/api/: __init__.py  auth.py  caches.py  cave.py  config.py  errors.py  json_provider.py
dash_connectivity_viewer/api/aligned_volumes/: minnie65_phase3.yaml
dash_connectivity_viewer/api/datastacks/: brain_and_nerve_cord.yaml  minnie65_phase3_v1.yaml  minnie65_public.yaml
dash_connectivity_viewer/api/endpoints/: __init__.py  cell_ids.py  connectivity.py  datastacks.py  decorations.py  health.py  links.py  plots.py  table_rows.py
dash_connectivity_viewer/api/services/: categorical.py  cell_id.py  datastack_config.py  decoration.py  keys.py  links.py  neuron.py  plots.py  query_runner.py  request_state.py  revalidation.py  spatial.py  state.py  swr.py  tables.py  timing.py  warmup.py
dash_connectivity_viewer/api/templates/links/: connectivity.yaml  inputs.yaml  outputs.yaml
dash_connectivity_viewer/api/templates/plots/: dynamic.yaml  num_syn_out_distribution.yaml  partners_in_bar.yaml  partners_in_histogram.yaml  partners_out_bar.yaml  partners_out_histogram.yaml  syn_vs_depth.yaml
dash_connectivity_viewer/cell_type_connectivity/: __init__.py  callbacks.py  config.py  cortex_data.py  cortex_panels.py  cortex_plots.py  layout.py  neuron_data_cortex.py  plots.py
dash_connectivity_viewer/cell_type_table/: __init__.py  callbacks.py  config.py  ct_utils.py  layout.py  table_lookup.py
dash_connectivity_viewer/common/: config.py  dataframe_utilities.py  external_stylesheets.py  link_utilities.py  lookup_utilities.py  neuron_data_base.py  neuron_data_base_old.py  neuron_data_base_refactor.py  schema_utils.py  table_lookup.py  transform_utils.py
dash_connectivity_viewer/connectivity_table/: __init__.py  callbacks.py  config.py  layout.py
dash_viewer/cell_type_connectivity/: __init__.py  callbacks.py  config.py  layout.py  plots.py
dash_viewer/cell_type_table/: callbacks.py  config.py  layout.py
dash_viewer/common/: dataframe_utilities.py  link_utilities.py  lookup_utilities.py  neuron_data_base.py
dash_viewer/connectivity_table/: callbacks.py  external_stylesheets.py  layout.py
dashconnectivityviewer/: __init__.py  callbacks.py  dash_url_helper.py  external_stylesheets.py  layout.py
dashconnectivityviewer/app/: config.py  dataframe_utilities.py  link_utilities.py
docs/: aligned-volumes.md  datastack-config.md  deployment-plan.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/.claude/agents/: scientific-dashboard-designer.md
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts  queries.ts  types.ts
frontend/src/components/: AnalyticsRail.tsx  CellFilterPanel.tsx  CellPanel.tsx  Combobox.tsx  DynamicPlotPanel.tsx  LandingPage.tsx  NeuronView.tsx  NotFound.tsx  PartnersPane.tsx  PartnersTable.tsx  PlotPanel.tsx  ShareMenu.tsx  SynapseDepthProfile.tsx  TableMetadata.tsx  TableRowsView.tsx  TableView.tsx  TokenBanner.tsx  Workspace.tsx  columnOrder.ts  tableColumns.tsx
frontend/src/hooks/: useMediaQuery.ts  useUrlState.ts
frontend/src/plots/: columns.ts  presets.ts  registry.ts  theme.ts  unify.ts  urlState.ts  vizColumns.ts
frontend/src/tours/: personalRecipes.ts  recipeFromUrl.ts  recipeFromYaml.ts  recipeYaml.ts  shareLinks.ts  urlMint.ts  useApplyRecipe.ts
frontend/src/types/: shims.d.ts
src/: __init__.py  layout.py
src/app/: neuron_data_base.py
