[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dash-connectivity-viewer"
description = "Dash connectivity viewer for CAVE data"
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.10"
authors = [
    { name = "Casey Schneider-Mizell", email = "caseysm@gmail.com" },
]
dynamic = ["version"]
dependencies = [
    "nglui>=4.7",
    "pandas",
    "numpy",
    "seaborn",
    "flask",
    "dash>=2",
    "dash_bootstrap_components>=1",
    "cachetools",
    "requests",
    "caveclient>=5.20.0",
    "dfbridge>=0.0.2",
    "plotly>=5",
    "loguru",
    "orjson",
    "standard-transform>=1",
]

[project.urls]
Homepage = "https://github.com/ceesem/dash-connectivity-viewer"

[tool.hatch.version]
path = "dash_connectivity_viewer/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["dash_connectivity_viewer"]

[tool.hatch.build.targets.sdist]
include = [
    "dash_connectivity_viewer",
    "README.md",
    "LICENSE.txt",
]
