[build-system]
requires = ["hatchling>=1.26.1"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dash_connectivity_viewer"]

# Top-level `config/` lives outside the package so config and code don't
# intermingle on disk (see services/datastack_config.py for the resolver).
# For wheel installs, ship it inside the package as `_bundled_config/` so
# the resolver finds it via `Path(__file__).resolve().parents[2]`. The
# directory may be empty or absent — the loader tolerates that.
[tool.hatch.build.targets.wheel.force-include]
"config" = "dash_connectivity_viewer/_bundled_config"

[project]
name = "dash-connectivity-viewer"
version = "2.2.7"
description = "Connectivity viewer for CAVE data — Flask API + React SPA"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Casey Schneider-Mizell", email = "caseysm@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    # Core CAVE stack — bumped for TableManager (8.x) and the modern nglui helpers (4.x).
    "caveclient>=8.0.1",
    "nglui>=4.7.3",
    "standard-transform>=1",
    # New API backend
    "flask>=3.0",
    "middle-auth-client>=3.18",
    "flask-cors>=4.0",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "cachetools>=5.3",
    "gunicorn>=21.2",
    # Data + plotting (server emits Plotly figure JSON)
    "pandas",
    "numpy",
    "plotly>=5",
    # Note: `requests` is needed transitively (caveclient / nglui /
    # middle-auth-client all pull it) but isn't listed here directly —
    # nothing in our source imports it. `dfbridge`, `loguru`, `orjson`
    # were removed; none were imported in the codebase and none are
    # transitively required.
]

[project.urls]
Homepage = "https://github.com/ceesem/dash-connectivity-viewer"
"Bug Tracker" = "https://github.com/ceesem/dash-connectivity-viewer/issues"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ipykernel",
    "bump-my-version",
]
lint = [
    "ruff",
]

[tool.uv]
default-groups = ["dev", "lint"]

[tool.bumpversion]
current_version = "2.2.7"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "v{new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "dash_connectivity_viewer/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.ruff]
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
